# leveldb_windows

./: CMakeLists.txt  README  TODO  leveldbConfig.cmake  leveldbConfig.cmake.in
db/: c.cc  c_test.c  corruption_test.cc  db_iter.cc  db_test.cc
issues/: issue178_test.cc
port/: port_win.cc  port_win.h
util/: env_win.cc  posix_logger.h
util/env_win_detail/: common.h  sys_types.h  win_all.h  win_misc.cc  win_misc.h  win_mmap.cc  win_mmap.h  win_thread.cc  win_thread.h  win_time.cc  win_time.h  winapi.cc  winapi.h
